[sync] Don't show an error icon when sync isn't signed in

BUG=732688, 732684
R=skym@chromium.org

Review-Url: https://codereview.chromium.org/2942473002
Cr-Commit-Position: refs/heads/master@{#479477}

Former-commit-id: b0f420e81d69cf2712f7847a364b2d7d3d59195c